Fix: #2545 - PHP-Info pages are always left-aligned and ltr

--- a/resources/css/administration.css
+++ b/resources/css/administration.css
@@ -66,7 +66,7 @@
 }
 .php-info .center table {
 	margin: 1em auto;
-	text-align: left;
+	text-align: start;
 }
 .php-info .center th {
 	text-align: center;
